--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ notifications:
     email: true
 
 env:
-    - UTIL=ansible-playbook 
+    - UTIL=ansible-playbook VERSION=$(curl -s https://pypi.python.org/pypi/ansible/json|jq --raw-output ".info.version")
 
 before_install:
     - sudo apt-get install -y jq
@@ -11,4 +11,4 @@ install:
     - cd ${UTIL} && docker build -t ${UTIL}:${TRAVIS_COMMIT} -f Dockerfile .
 
 script:
-    - docker run ${UTIL}:${TRAVIS_COMMIT} --version 
+    - docker run ${UTIL}:${TRAVIS_COMMIT} --version |grep ${VERSION}
