--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,10 @@ install:
 
 script:
     - docker run ${UTIL}:${TRAVIS_COMMIT} --version |grep ${VERSION}
+
+after_success:
+    - if [ "$TRAVIS_BRANCH" == "master" ]; then
+        docker login -e "$DOCKER_EMAIL" -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+        docker tag -f ${UTIL}:${TRAVIS_COMMIT} ${DOCKER_REPOSITORY}/${UTIL}:latest;
+        docker push ${DOCKER_REPOSITORY}/${UTIL}:latest;
+      fi
