--- a/ansible-playbook/Dockerfile
+++ b/ansible-playbook/Dockerfile
@@ -4,7 +4,7 @@ RUN apk update \
     && apk --update add --virtual build-dependencies python-dev openssl-dev libffi-dev build-base gcc  \
     && pip install ansible \
     && apk del build-dependencies \
-    && adduser -u 1000 ansible ansible -D 
+    && adduser ansible ansible -D 
 USER ansible
 WORKDIR /home/ansible
 ENTRYPOINT ["ansible-playbook"]
