--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,8 @@ notifications:
     email: true
 
 env:
-    - UTIL=ansible-playbook VERSION=$(curl -s https://pypi.python.org/pypi/ansible/json|jq --raw-output ".info.version")
+    - UTIL=ansible-playbook VERSION=$(curl -s https://pypi.python.org/pypi/ansible/json|jq --raw-output ".info.version") VERSION_CHECK="--version"
+    - UTIL=kubectl          VERSION=$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)      VERSION_CHECK="version --client"
 
 before_install:
     - sudo apt-get install -y jq
@@ -11,7 +12,7 @@ install:
     - cd ${UTIL} && docker build -t ${UTIL}:${TRAVIS_COMMIT} -f Dockerfile .
 
 script:
-    - docker run ${UTIL}:${TRAVIS_COMMIT} --version |grep ${VERSION}
+    - docker run ${UTIL}:${TRAVIS_COMMIT} ${VERSION_CHECK} |grep ${VERSION}
 
 after_success:
     - if [ "$TRAVIS_BRANCH" == "master" ]; then
