--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
 
 after_success:
     - if [ "$TRAVIS_BRANCH" == "master" ]; then
-        docker login -e "$DOCKER_EMAIL" -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
-        docker tag -f ${UTIL}:${TRAVIS_COMMIT} ${DOCKER_REPOSITORY}/${UTIL}:latest;
+        docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
+        docker tag ${UTIL}:${TRAVIS_COMMIT} ${DOCKER_REPOSITORY}/${UTIL}:latest;
         docker push ${DOCKER_REPOSITORY}/${UTIL}:latest;
       fi
