use kubectl homedir as workdir so I can map the current path there

--- a/kubectl/Dockerfile
+++ b/kubectl/Dockerfile
@@ -4,4 +4,5 @@ RUN apk --update add curl ca-certificates \
     && chmod +x /usr/local/bin/kubectl \
     && adduser kubectl kubectl -D
 USER kubectl
+WORKDIR /home/kubectl/
 ENTRYPOINT ["kubectl"]
