use single container for all ansible tools. specify entrypoint to select which one

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ notifications:
     email: true
 
 env:
-    - UTIL=ansible-playbook VERSION_CHECK="--version"
+    - UTIL=ansible          VERSION_CHECK="--version"
     - UTIL=kubectl          VERSION_CHECK="version --client"
 
 install:
