git dependency for ansible-galaxy

--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,6 +1,6 @@
 FROM alpine:latest
 RUN apk update \
-    && apk --update add python py-pip openssl ca-certificates  \
+    && apk --update add python py-pip openssl ca-certificates git \
     && apk --update add --virtual build-dependencies python-dev openssl-dev libffi-dev build-base gcc  \
     && pip install ansible pyopenssl apache-libcloud pycrypto \
     && apk del build-dependencies \
